--- a/styles/cards.css
+++ b/styles/cards.css
@@ -44,11 +44,11 @@
   margin-top: 72px;
 }
 
-.responsive_img {
+/* .responsive_img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 
 .type_container {
   width: 90%;
@@ -419,10 +419,10 @@
   justify-content: flex-start;
 }
 
-.dialog_img {
+/* .dialog_img {
   width: 100px;
   height: 100px;
-}
+} */
 
 .dialog_about_container {
   width: 100%;
