--- a/style.css
+++ b/style.css
@@ -110,16 +110,11 @@ header {
   padding: 16px;
 }
 
-
-/* NEU */
-.pokemon-card-placeholder {
+/* .pokemon-card-placeholder {
   width: 150px;
   height: 200px;
   background-color: #f0f0f0;
-}
-/* NEU */
-
-
+} */
 
 .loader {
   width: 48px;
